cabal-version: 1.18
name: hs
version: 0.1.0.0
license: BSD3
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
build-type: Simple
extra-source-files:
    cabal.project.local

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

benchmark hs-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell98
    ghc-options: -Wall
    build-depends:
        base -any,
        criterion -any,
        edit-distance -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Wnoncanonical-monad-instances
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
